[gd_scene load_steps=4 format=3 uid="uid://dxn5mnw32ulqt"]

[ext_resource type="Theme" uid="uid://d1you1rrwuu48" path="res://Scenes/sci_fi_theme.tres" id="1_qon6n"]
[ext_resource type="Script" path="res://Resources/InitialCrewCreation.gd" id="1_xep0y"]
[ext_resource type="Texture2D" uid="uid://b03o2n8a6q4qg" path="res://assets/Basic assets/Card X3/Card X6.png" id="3_background"]

[node name="CrewSizeSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qon6n")
script = ExtResource("1_xep0y")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_background")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Initial Crew Creation"
horizontal_alignment = 1

[node name="TutorialLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Tutorial Mode: Create your initial crew of 5 members."

[node name="CrewSizeContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer"]
layout_mode = 2
text = "Select Crew Size:"

[node name="HSlider" type="HSlider" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer"]
layout_mode = 2
min_value = 4.0
max_value = 6.0
value = 5.0
rounded = true
tick_count = 3
ticks_on_borders = true

[node name="SliderLabels" type="Control" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer/HSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="4" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer/HSlider/SliderLabels"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_right = 40.0
offset_bottom = 31.0
grow_vertical = 0
text = "4"
horizontal_alignment = 1

[node name="6" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer/HSlider/SliderLabels"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = 5.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 0
text = "6"
horizontal_alignment = 1

[node name="CurrentSizeLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer"]
layout_mode = 2
text = "Current Crew Size: 5"
horizontal_alignment = 1

[node name="ConfirmButton" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="RightPanel" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="HBoxContainer/RightPanel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/RightPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightPanel/Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="HBoxContainer/RightPanel/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Crew Preview"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/RightPanel/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CrewPreview" type="VBoxContainer" parent="HBoxContainer/RightPanel/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="value_changed" from="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
